added breakfast category page

--- a/src/components/RecipeViewCard/styles.css
+++ b/src/components/RecipeViewCard/styles.css
@@ -2,6 +2,10 @@
     width: 19rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
+    margin-top: 10px;
     border: 1px solid black
+}
+
+h1 {
+    text-align: center;
 }
