--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -16,3 +16,10 @@ a.dropdown-item {
     color: black;
     text-decoration: none
 }
+
+.dropdown-divider {
+    height: 0;
+    margin: .5rem 0;
+    overflow: hidden;
+    border-top: 1px solid black;
+}
