profile button css changes in navbar

--- a/src/components/LogInModal/styles.css
+++ b/src/components/LogInModal/styles.css
@@ -3,7 +3,8 @@
     background-color: transparent;
     border-color: none;
     border: none;
-    background: none
+    background: none;
+    font-size: 18px;
     
 }
 .btn-light:hover {
