--- a/src/components/LogInModal/styles.css
+++ b/src/components/LogInModal/styles.css
@@ -21,3 +21,13 @@
     background-color: transparent;
     border-color: transparent;
 }
+
+.modalProfilImage{
+    width: 100px;
+    margin-right: 15px;
+    height:auto;
+}
+
+.modalTitle{
+    margin-top: 15px;
+}
