added accout name to sign up page, css changes

--- a/src/components/SignInForm/styles.css
+++ b/src/components/SignInForm/styles.css
@@ -5,3 +5,11 @@
      margin-top: 25px;
      border: 1px solid black
 }
+
+.signInFormControl {
+     margin-bottom: 5px;
+}
+
+.signInBtn {
+     width: 100%
+}
