--- a/src/components/UserProfile/styles.css
+++ b/src/components/UserProfile/styles.css
@@ -1,7 +1,12 @@
+.editProfileBtn {
+    width: 100%
+}
+
 .RecipeListGroup {
     border: 1px solid black;
     padding: 10px
 }
+
 @media screen and (max-width: 767px){
     .ProfileImage {
         width: 300px;
