--- a/src/components/EditProfileForm/styles.css
+++ b/src/components/EditProfileForm/styles.css
@@ -2,8 +2,13 @@
     width: 34rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
+    margin-top: 15px;
     border: 1px solid black
+}
+
+.updateProfileBtn {
+    width: 100%;
+    margin-bottom: 5px;
 }
 
 @media screen and (max-width: 540px){
