--- a/src/components/UserProfile/styles.css
+++ b/src/components/UserProfile/styles.css
@@ -4,7 +4,7 @@
 
 .RecipeListGroup {
     border: 1px solid black;
-    padding: 10px
+    padding: 10px;
 }
 
 @media screen and (max-width: 767px){
