--- a/src/components/IngreForm/styles.css
+++ b/src/components/IngreForm/styles.css
@@ -1,3 +1,29 @@
-.ingreFormControl {
-    margin-top: 10px;
+.ingreFormControl, .ingreFormControl:link, .ingreFormControl:hover, .ingreFormControl:active, .ingreFormControl:focus, .ingreFormControl:visited {
+    background-color: transparent;
+    border: 1px solid midnightblue;
+    color: midnightblue;
+}
+
+.ingreFormControl::placeholder{
+    color: midnightblue
+}
+
+.addIngreTextHelp {
+    font-weight: bold;
+    text-align: center;
+    color:black;
+    margin-bottom: 3px;
+    margin-top: 3px;
+}
+
+.ingreFormListGroup{
+    background-color: transparent;
+    color: midnightblue;
+}
+
+.ingreFormAddBtn, .ingreFormAddBtn:link, .ingreFormAddBtn:hover, .ingreFormAddBtn:active, .ingreFormAddBtn:focus, .ingreFormAddBtn:visited {
+    width: 100%;
+    background: midnightblue;
+    border: 0px;
+    color:lightgoldenrodyellow;
 }
