--- a/src/components/LogInModal/styles.css
+++ b/src/components/LogInModal/styles.css
@@ -1,4 +1,21 @@
-.btn-light {
+.accoutNameLink, .accoutNameLink:hover, .accoutNameLink:active, .accoutNameLink:focus {
+    color: black;
+    text-decoration: none;
+}
+
+.modalProfilImage{
+    width: 100px;
+    margin-right: 15px;
+    height:auto;
+}
+
+.modalTitle{
+    margin-top: 15px;
+}
+
+
+
+/* .btn-light {
     color: black; 
     background-color: transparent;
     border-color: none;
@@ -20,14 +37,4 @@
     outline: 0;
     background-color: transparent;
     border-color: transparent;
-}
-
-.modalProfilImage{
-    width: 100px;
-    margin-right: 15px;
-    height:auto;
-}
-
-.modalTitle{
-    margin-top: 15px;
-}
+} */
