--- a/src/components/RecipeForm/styles.css
+++ b/src/components/RecipeForm/styles.css
@@ -1,3 +1,17 @@
-.recipeFormControl {
+.recipeFormControl, .recipeFormControl:link, .recipeFormControl:hover, .recipeFormControl:active, .recipeFormControl:focus, .recipeFormControl:visited {
     margin-bottom: 5px;
+    background-color: transparent;
+    border: 1px solid midnightblue;
+    color: midnightblue;
+}
+
+.recipeFormControl::placeholder{
+    color: midnightblue
+}
+
+.recipeFormBtn, .recipeFormBtn:link, .recipeFormBtn:hover, .recipeFormBtn:active, .recipeFormBtn:focus, .recipeFormBtn:visited{
+    width: 100%;
+    background: midnightblue;
+    border: 0px;
+    color:lightgoldenrodyellow;
 }
