--- a/src/components/RecipeViewCard/styles.css
+++ b/src/components/RecipeViewCard/styles.css
@@ -3,9 +3,27 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
-    border: 1px solid black
+    border: 0px;
+    /* background: linear-gradient(to bottom left, lightgoldenrodyellow,lemonchiffon, goldenrod) */
+    background: linear-gradient(to bottom left, transparent, lightgoldenrodyellow)
+    /* background:transparent */
+}
+
+.viewRecipeLink{
+    color:firebrick;
+}
+.viewRecipeLink:hover{
+    color: firebrick;
+    text-decoration: none
+}
+
+.recipeViewCardImage {
+    width: 100%;
+    height: 300px;
+    
 }
 
 h1 {
     text-align: center;
+    color: lightgoldenrodyellow;
 }
