--- a/src/components/SignUpForm/styles.css
+++ b/src/components/SignUpForm/styles.css
@@ -1,8 +1,31 @@
-.signUpBtn {
-    width: 100%;
+.SignUpCard {
+    width: 22rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    border: 0px;
+    background: linear-gradient(to bottom left, transparent, lightgoldenrodyellow)
 }
 
-.signInLink {
+.signUpFormControl, .signUpFormControl:link, .signUpFormControl:hover, .signUpFormControl:active, .signUpFormControl:focus, .signUpFormControl:visited {
+    margin-bottom: 5px;
+    background-color: transparent;
+    border: 1px solid midnightblue;
+    color: midnightblue;
+}
+
+.signUpFormControl::placeholder{
+    color: midnightblue
+}
+
+.signUpBtn, .signUpBtn:link, .signUpBtn:hover, .signUpBtn:active, .signUpBtn:focus, .signUpBtn:visited {
+    width: 100%;
+    background: midnightblue;
+    border: 0px;
+    color:lightgoldenrodyellow;
+}
+
+.signInLink, .signInLink:link, .signInLink:hover, .signInLink:active, .signInLink:focus, .signInLink:visited  {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 10px;
@@ -10,16 +33,4 @@
 
 .Registered {
     margin-top: -10px;
-}
-
-.SignUpCard {
-    width: 22rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    border: 1px solid black
-}
-
-.signUpFormControl {
-    margin-bottom: 5px;
 }
