--- a/src/components/RecipeViewCard/styles.css
+++ b/src/components/RecipeViewCard/styles.css
@@ -3,18 +3,16 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
-    border: 0px;
-    /* background: linear-gradient(to bottom left, lightgoldenrodyellow,lemonchiffon, goldenrod) */
+    border: 1px solid lightgoldenrodyellow;
     background: linear-gradient(to bottom left, transparent, lightgoldenrodyellow)
-    /* background:transparent */
+  
 }
 
-.viewRecipeLink{
+.viewRecipeLink, .viewRecipeLink:link, .viewRecipeLink:hover, .viewRecipeLink:active, .viewRecipeLink:focus, .viewRecipeLink:visited{
     color:firebrick;
-}
-.viewRecipeLink:hover{
-    color: firebrick;
-    text-decoration: none
+    text-decoration: none;
+    margin:0 auto;
+    margin-bottom: 10px;
 }
 
 .recipeViewCardImage {
