--- a/src/components/LogInModal/styles.css
+++ b/src/components/LogInModal/styles.css
@@ -19,7 +19,7 @@
     margin: 0 auto;
 }
 .modal-content{
-    background: linear-gradient(goldenrod,gold, yellow,orangered);
+    background: linear-gradient(goldenrod,gold, yellow,orange,orangered);
 }
 
 .viewProfileLinkBtn, .viewProfileLinkBtn:link, .viewProfileLinkBtn:hover, .viewProfileLinkBtn:active, .viewProfileLinkBtn:focus, .viewProfileLinkBtn:visited {
@@ -29,7 +29,17 @@
 
 .signOutBtn, .signOutBtn:link, .signOutBtn:hover, .signOutBtn:active, .signOutBtn:focus, .signOutBtn:visited {
     width: 100%;
-    background: midnightblue;
+    background: linear-gradient(to bottom left, transparent, gold, goldenrod);
     border: 0px;
-    color:lightgoldenrodyellow;
+    color:midnightblue;
+}
+
+
+@media screen and (max-width: 400px){
+    .modalProfilImage{
+        width: 100px;
+        margin-top:15px;
+        margin-right: 15px;
+        height:auto;
+    }
 }
