--- a/src/components/UpdateRecipeForm/styles.css
+++ b/src/components/UpdateRecipeForm/styles.css
@@ -8,7 +8,6 @@
 }
 
 .updateRecipeTitle {
-    margin-top:10px;
     text-align: center;
     color:midnightblue;
 }
@@ -43,6 +42,7 @@
     border-radius: 15px;
 }
 .updateIngreSetBtn, .updateIngreSetBtn:link, .updateIngreSetBtn:hover, .updateIngreSetBtn:active, .updateIngreSetBtn:focus, .updateIngreSetBtn:visited{
+    width:100%;
     border: 1px solid midnightblue;
     color: midnightblue;
     background:transparent;
