--- a/src/components/LogInModal/styles.css
+++ b/src/components/LogInModal/styles.css
@@ -11,7 +11,7 @@
 }
 
 .modalTitle{
-    margin-top: 15px;
+    margin-top: 35px;
     color:midnightblue;
 }
 
@@ -41,5 +41,10 @@
         margin-top:15px;
         margin-right: 15px;
         height:auto;
+    }
+
+    .modalTitle{
+        margin-top: 15px;
+        color:midnightblue;
     }
 }
