--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -20,7 +20,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 body {
-    background: url('https://i.imgur.com/gNcjsZc.jpg'); 
+    background: url('https://i.imgur.com/gNcjsZc.jpg') center center fixed; 
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
