--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -1,5 +1,6 @@
 .homeSearchBar, .homeSearchBar:hover, .homeSearchBar:active, .homeSearchBar:focus{
-    background: transparent;
+    /* background: transparent; */
+    background: linear-gradient(transparent, midnightblue);
     border: 1px solid lightgoldenrodyellow;
     border-radius: 15px;
     color:lightgoldenrodyellow
