--- a/src/components/RecipeCard/styles.css
+++ b/src/components/RecipeCard/styles.css
@@ -1,5 +1,5 @@
 .RecipeCard {
-    width: 70%;
+    width: 50rem;
     margin-left: auto;
     margin-right: auto;
     border: 0px;
@@ -7,7 +7,7 @@
     background: linear-gradient(to top left,goldenrod, lightgoldenrodyellow, goldenrod)
 }
 .RecipeCardImage {
-    width: 400px;
+    width: 500px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -62,12 +62,39 @@
     }
 }
 
+@media screen and (max-width: 830px){
+    .RecipeCard {
+        width: 100vw
+    }
+    .RecipeCardImage {
+        width: 550px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        object-fit: contain;
+    }
+}
+
+
+@media screen and (max-width: 600px){
+    .RecipeCard {
+        width: 100vw
+    }
+    .RecipeCardImage {
+        width: 500px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        object-fit: contain;
+    }
+}
+
 @media screen and (max-width: 500px){
     .RecipeCard {
         width: 100vw
     }
     .RecipeCardImage {
-        width: 450px;
+        width: 425px;
         height: auto;
         margin-left: auto;
         margin-right: auto;
@@ -93,7 +120,7 @@
         width: 100vw
     }
     .RecipeCardImage {
-        width: 250px;
+        width: 300px;
         height: auto;
         margin-left: auto;
         margin-right: auto;
