--- a/src/pages/NoPage/styles.css
+++ b/src/pages/NoPage/styles.css
@@ -4,6 +4,6 @@
     margin-right: auto;
     margin-top: 25px;
     border: 0px;
-    color:midnightblue;
-    background: linear-gradient(to top right,goldenrod, lightgoldenrodyellow, transparent)
+    color:royalblue;
+    background: linear-gradient(to bottom right, lightgoldenrodyellow, transparent)
 }
