--- a/src/components/UpdateRecipeForm/styles.css
+++ b/src/components/UpdateRecipeForm/styles.css
@@ -4,7 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     border: 0px;
-    background: linear-gradient(to top left, transparent,goldenrod, lightgoldenrodyellow, transparent)
+    background: linear-gradient(to bottom right,goldenrod, lightgoldenrodyellow)
 }
 
 .updateRecipeTitle {
@@ -30,7 +30,7 @@
     width: 100%;
     margin-top:10px;
     border: 0px;
-    background: midnightblue;
+    background: linear-gradient(to bottom right,royalblue, midnightblue, cornflowerblue);
     color:lightgoldenrodyellow;
 }
 .recipeImageUpdate{
@@ -53,7 +53,7 @@
     padding: .375rem;
     margin-top:10px;
     border: 0px;
-    background: midnightblue;
+    background: linear-gradient(to bottom right,royalblue, midnightblue, cornflowerblue);
     color:lightgoldenrodyellow;
     text-align: center;
     text-decoration: none;
