--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -1,6 +1,6 @@
 .homeSearchBar, .homeSearchBar:hover, .homeSearchBar:active, .homeSearchBar:focus{
     /* background: transparent; */
-    background: linear-gradient(to bottom right,royalblue, midnightblue,cornflowerblue);
+    background: linear-gradient(to bottom right,royalblue,cornflowerblue);
     border: 1px solid lightgoldenrodyellow;
     border-radius: 15px;
     color:lightgoldenrodyellow
@@ -20,15 +20,17 @@ input[type="search"]::-webkit-search-cancel-button {
     background-color: firebrick;
 }
 
+h1 {
+    text-align: center;
+    color: midnightblue;
+}
+
 body {
-    /* background: url('https://i.imgur.com/gNcjsZc.jpg') center center fixed;  */
-    /* background-repeat: no-repeat; */
-    /* -webkit-background-size: cover; */
-    /* -moz-background-size: cover; */
-    /* -o-background-size: cover; */
-    /* background-size: cover; */
-    background: repeating-linear-gradient(
-		45deg,
+	height: 100vh;
+	font-family: 'Courier New', Courier, monospace;
+    background: 
+	repeating-linear-gradient(
+		90deg,
 		transparent,
 		transparent 1em,
 		moccasin 0,
@@ -47,7 +49,7 @@ body {
 		beige 8em
 	),
 	repeating-linear-gradient(
-		-45deg,
+		0deg,
 		transparent,
 		transparent 1em,
 		khaki 0,
@@ -60,9 +62,8 @@ body {
 		transparent 5em,
 		peachpuff 0,
 		peachpuff 6em
-	), whitesmoke;
+		), whitesmoke;
 
 	background-blend-mode: multiply;
-	
 }
     
